--- a/snp_site/Pipfile
+++ b/snp_site/Pipfile
@@ -7,9 +7,10 @@ name = "pypi"
 django = "*"
 environ = "*"
 split-settings = "*"
-django-allauth = "*"
 django-viewflow = "*"
 djangorestframework = "*"
+django-allauth = {extras = ["socialaccount"], version = "64.2.1"}
+django-service-objects = { git = "https://git.snpdev.ru/saltpepper/django-service-objects.git"}
 
 [dev-packages]
 
