--- a/snp_site/Pipfile
+++ b/snp_site/Pipfile
@@ -11,6 +11,7 @@ django-viewflow = "*"
 djangorestframework = "*"
 django-allauth = {extras = ["socialaccount"], version = "64.2.1"}
 django-service-objects = { git = "https://git.snpdev.ru/saltpepper/django-service-objects.git"}
+drf-spectacular = "*"
 
 [dev-packages]
 
