--- a/snp_site/Pipfile
+++ b/snp_site/Pipfile
@@ -12,6 +12,7 @@ djangorestframework = "*"
 django-allauth = {extras = ["socialaccount"], version = "64.2.1"}
 django-service-objects = { git = "https://git.snpdev.ru/saltpepper/django-service-objects.git"}
 drf-spectacular = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 
