--- a/snp_site/Pipfile
+++ b/snp_site/Pipfile
@@ -13,6 +13,7 @@ django-allauth = {extras = ["socialaccount"], version = "64.2.1"}
 django-service-objects = { git = "https://git.snpdev.ru/saltpepper/django-service-objects.git"}
 drf-spectacular = "*"
 djangorestframework-simplejwt = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 
