--- a/snp_site/Pipfile
+++ b/snp_site/Pipfile
@@ -15,6 +15,7 @@ drf-spectacular = "*"
 djangorestframework-simplejwt = "*"
 django-cors-headers = "*"
 channels = "*"
+django-imagekit = "*"
 
 [dev-packages]
 
