--- a/snp_site/Pipfile
+++ b/snp_site/Pipfile
@@ -17,11 +17,14 @@ django-cors-headers = "*"
 channels = "*"
 django-imagekit = "*"
 django-environ = "*"
-psycopg2 = "*"
 rich = "*"
 django-log-request-id = "*"
+celery = "*"
+psycopg2-binary = "*"
+redis = "*"
 
 [dev-packages]
+
 
 [requires]
 python_version = "3.11"
