--- a/snp_site/.pre-commit-config.yaml
+++ b/snp_site/.pre-commit-config.yaml
@@ -1,41 +1,93 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
+    rev: v4.5.0
     hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
     -   id: trailing-whitespace
-        exclude: __init__.py
--   repo: https://github.com/PyCQA/flake8
-    rev: 7.1.1
+    -   id: end-of-file-fixer
+    -   id: check-yaml
+    -   id: check-added-large-files
+    -   id: check-merge-conflict
+    -   id: debug-statements
+    -   id: check-ast
+    -   id: detect-private-key
+-   repo: https://github.com/pre-commit/pygrep-hooks
+    rev: "v1.10.0"
     hooks:
-    -   id: flake8
-        exclude: __init__.py
+      - id: python-no-eval
+-   repo: https://github.com/asottile/pyupgrade
+    rev: "v3.15.0"
+    hooks:
+    -   id: pyupgrade
 -   repo: https://github.com/PyCQA/autoflake
     rev: v2.3.1
     hooks:
-    -   id: autoflake
-        args: [--remove-all-unused-imports, --in-place]
-        exclude: __init__.py
--   repo: https://github.com/PyCQA/bandit
-    rev: 1.8.2
-    hooks:
-    -   id: bandit
-        exclude: __init__.py
+        - id: autoflake
+          name: autoflake
+          entry: autoflake
+          language: python
+          'types': [ python ]
+          require_serial: true
+          exclude: |
+            (?x)(
+                ^models_app/admin/__init__.py|
+                ^models_app/models/__init__.py
+            )
 -   repo: https://github.com/asottile/yesqa
     rev: v1.5.0
     hooks:
-    -   id: yesqa
-        exclude: __init__.py
--   repo: https://github.com/PyCQA/isort
-    rev: 6.0.0
-    id: isort
+        - id: yesqa
+          name: Strip unnecessary `# noqa`s
+          description: Automatically remove unnecessary `# noqa` comments
+          entry: yesqa
+          language: python
+          types: [ python ]
+-   repo: https://github.com/PyCQA/flake8
+    rev: 7.1.1
     hooks:
-    -   id: isort
-        exclude: __init__.py
+        - id: flake8
+          args: [--max-line-length=120]
+          name: flake8
+          description: '`flake8` is a command-line utility for enforcing style consistency across Python projects.'
+          entry: flake8
+          language: python
+          types: [ python ]
+          require_serial: true
+          exclude: |
+            (?x)(
+                ^snp_site/models_app/admin/__init__.py|
+                ^snp_site/models_app/models/__init__.py|
+                ^snp_site/models_app/migrations/
+            )
+
+-   repo: https://github.com/PyCQA/bandit
+    rev: 1.8.2
+    hooks:
+        - id: bandit
+          name: bandit
+          description: 'Bandit is a tool for finding common security issues in Python code'
+          entry: bandit
+          language: python
+          language_version: python3
+          types: [ python ]
 -   repo: https://github.com/psf/black
     rev: 25.1.0
     id: black
     hooks:
-    -   id: black
-        exclude: __init__.py
+        - id: black
+          name: black
+          description: "Black: The uncompromising Python code formatter"
+          entry: black
+          language: python
+          minimum_pre_commit_version: 2.9.2
+          require_serial: true
+          types_or: [ python, pyi ]
+
+-   repo: https://github.com/PyCQA/isort
+    rev: 6.0.0
+    id: isort
+    hooks:
+        - id: isort
+          name: isort (python)
+          entry: isort
+          language: python
+          args: [ "--profile", "black" ]
