--- a/snp_site/Pipfile
+++ b/snp_site/Pipfile
@@ -23,6 +23,7 @@ psycopg2-binary = "*"
 redis = "*"
 pre-commit = "*"
 channels = {extras = ["daphne"], version = "*"}
+channels-redis = "*"
 
 [dev-packages]
 
